examples/tests/invalid/bring.w
bring std;
//    ^^^ Redundant bring of "std"
bring cloud;
bring cloud;
//    ^^^^^ "cloud" is already defined